--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
     "name": "sp-form-data",
     "version": "1.0.0",
     "description": "Plugin for getting form data and defining URL of search parameters",
-    "main": "dist/sp-form-data.js",
-    "scripts": {
-        "build": "webpack"
-    },
+    "main": "./dist/sp-form-data.js",
     "keywords": [
         "formdata",
         "form",
@@ -23,19 +20,13 @@
     },
     "homepage": "https://github.com/ldu1991/sp-form-data/#readme",
     "devDependencies": {
-        "@babel/core": "^7.7.5",
-        "@babel/plugin-proposal-class-properties": "^7.7.4",
-        "@babel/plugin-proposal-decorators": "^7.7.4",
-        "@babel/plugin-proposal-export-default-from": "^7.7.4",
-        "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
-        "@babel/plugin-transform-arrow-functions": "^7.7.4",
-        "@babel/plugin-transform-async-to-generator": "^7.7.4",
-        "@babel/plugin-transform-runtime": "^7.7.6",
-        "@babel/preset-env": "^7.7.6",
-        "babel-loader": "^8.0.6",
-        "config": "^3.2.4",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.9.0"
+        "@babel/core": "latest",
+        "@babel/preset-env": "latest",
+        "gulp": "latest",
+        "gulp-babel": "latest",
+        "gulp-plumber": "latest",
+        "gulp-rename": "latest",
+        "gulp-uglify": "latest",
+        "gulp-umd": "latest"
     }
 }
