--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "sp-form-data",
-    "version": "1.2.8",
-    "description": "Plugin for getting form data and defining URL of search parameters",
-    "main": "./sp-form-data.js",
+    "version": "1.2.9",
+    "description": "VanillaJS (pure JavaScript) plugin that reads form data with a change in Get URL parameters",
+    "main": "./dist/spFormData.min.js",
     "keywords": [
         "formdata",
         "form",
@@ -11,7 +11,7 @@
         "ajaxfilter",
         "formfilter"
     ],
-    "author": "Denis Lipatov",
+    "author": "Denis Lipatov <ldu2601@gmail.com>",
     "license": "BSD",
     "repository": {
         "type": "git",
@@ -20,5 +20,28 @@
     "bugs": {
         "url": "https://github.com/ldu1991/sp-form-data/issues"
     },
-    "homepage": "https://github.com/ldu1991/sp-form-data/#readme"
+    "homepage": "https://github.com/ldu1991/sp-form-data/#readme",
+    "scripts": {
+        "start": "webpack-dev-server --mode development --open --port 3000 --hot",
+        "build": "webpack --mode production",
+        "format": "prettier --write '**/**.{js,json,html}'",
+        "lint": "eslint src --ext .js --fix"
+    },
+    "devDependencies": {
+        "webpack": "latest",
+        "webpack-dev-server": "latest",
+        "@babel/core": "latest",
+        "@babel/preset-env": "latest",
+        "babel-loader": "latest",
+        "eslint": "latest",
+        "eslint-config-airbnb-base": "latest",
+        "eslint-config-prettier": "latest",
+        "eslint-plugin-import": "latest",
+        "eslint-plugin-node": "latest",
+        "eslint-plugin-prettier": "latest",
+        "moment": "latest",
+        "prettier": "latest",
+        "terser-webpack-plugin": "latest",
+        "webpack-cli": "latest"
+    }
 }
