--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     },
     "homepage": "https://github.com/ldu1991/sp-form-data/#readme",
     "scripts": {
-        "start": "webpack serve --mode development",
-        "build": "webpack --mode production",
+        "start": "webpack serve --config webpack.dev.js",
+        "build": "webpack --config webpack.prod.js",
         "format": "prettier --write '**/**.{js,json,html}'",
         "lint": "eslint src --ext .js --fix"
     },
@@ -31,12 +31,14 @@
         "@babel/core": "latest",
         "@babel/preset-env": "latest",
         "babel-loader": "latest",
+        "clean-webpack-plugin": "^4.0.0",
         "eslint": "latest",
         "eslint-config-airbnb-base": "latest",
         "eslint-config-prettier": "latest",
         "eslint-plugin-import": "latest",
         "eslint-plugin-node": "latest",
         "eslint-plugin-prettier": "latest",
+        "html-webpack-plugin": "latest",
         "moment": "latest",
         "prettier": "latest",
         "terser-webpack-plugin": "latest",
