--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sp-form-data",
-    "version": "1.4.11",
+    "version": "1.4.12",
     "description": "VanillaJS (pure JavaScript) plugin that reads form data with a change in Get URL parameters",
     "main": "./dist/spFormData.min.js",
     "keywords": [
@@ -22,8 +22,8 @@
     },
     "homepage": "https://github.com/ldu1991/sp-form-data/#readme",
     "scripts": {
-        "start": "webpack serve --config webpack.dev.js",
-        "build": "webpack --config webpack.prod.js",
+        "start": "webpack serve",
+        "build": "webpack --env production",
         "format": "prettier --write '**/**.{js,json,html}'",
         "lint": "eslint src --ext .js --fix"
     },
@@ -31,7 +31,7 @@
         "@babel/core": "latest",
         "@babel/preset-env": "latest",
         "babel-loader": "latest",
-        "clean-webpack-plugin": "^4.0.0",
+        "clean-webpack-plugin": "latest",
         "eslint": "latest",
         "eslint-config-airbnb-base": "latest",
         "eslint-config-prettier": "latest",
