--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "sp-form-data",
     "version": "1.5.0",
     "description": "VanillaJS (pure JavaScript) plugin that reads form data with a change in Get URL parameters",
-    "main": "./dist/spFormData.min.js",
+    "main": "./dist/sp-form-data.min.js",
     "keywords": [
         "formdata",
         "form",
