--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sp-form-data",
     "version": "2.2.0",
-    "description": "VanillaJS (pure JavaScript) plugin that reads form data with and Change URL Query Parameters",
+    "description": "VanillaJS (pure JavaScript) plugin that reads form data and Change URL Query Parameters",
     "main": "./dist/sp-form-data.min.js",
     "keywords": [
         "formdata",
